[tool.poetry]
name = "broadcast_wsrpc"
version = "0.2.1"
description = "WebSocket & HTTP RPC library"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
packages = [{ include = "broadcast_wsrpc", from = "python" }]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
msgpack = "^1.0"
websockets = ">=10, <=12"

[tool.poetry.dev-dependencies]
black = "^24.4"
ruff = "^0.4.1"
mypy = "^1.8.0"
poetry = "^1.8.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyprojectx]
poetry = "poetry==1.8.2"

[tool.pyprojectx.aliases]
install = "poetry install"
run = "poetry run"
outdated = "poetry show --outdated"
test = "poetry run pytest"
types = "poetry run mypy python/broadcast_wsrpc"
build = "poetry build --format wheel"
check = "poetry run ruff check python/broadcast_wsrpc"

[tool.pytest.ini_options]
testpaths = ["python/broadcast_wsrpc"]
python_files = "/*/test_*.py"
