[project]
name = "broadcast_wsrpc"
version = "0.3.1"
description = "WebSocket & HTTP RPC library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["msgpack~=1.0", "websockets >=10, <=12"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff~=0.11.2",
    "pytest~=7.4.3",
    "pytest-asyncio~=0.23.6",
    "pyright",
    "twine~=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/broadcast_wsrpc"]

[tool.pyprojectx]
uv = "uv==0.6.9"

[tool.pytest.ini_options]
testpaths = ["python/broadcast_wsrpc"]
python_files = "/*/test_*.py"

[tool.pyright]
typeCheckingMode = "strict"
