[package]
name = "broadcast_wsrpc"
version = "1.0.0"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
async-tungstenite = { version = "0.17", features = ["tokio-runtime"] }
log = "0.4"
tokio = { version = "^1", features = ["sync", "time", "macros"] }
futures = "0.3"
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2"
env_logger = "0.9"
thiserror = "1"
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
tokio-stream = "0.1.7"

[dependencies.serde]
features = ["derive"]
version = "1"
