[package]
name = "broadcast_wsrpc"
version = "0.3.1"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
async-tungstenite = { version = "0.17", features = ["tokio-runtime"] }
env_logger = "0.9"
futures = "0.3"
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
log = "0.4"
serde_json = "1"
thiserror = "1"
tokio = { version = "^1", features = ["sync", "time", "macros"] }
tokio-stream = "0.1.7"
url = "2"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.serde]
features = ["derive"]
version = "^1"

[dev-dependencies]
tokio = { version = "^1", features = ["full"] }
anyhow = "1"
