[package]
name = "wsrpc"
version = "0.1.0"
authors = ["Raphael Bernhard <beraphae@gmail.com>"]
edition = "2018"

[dependencies]
async-tungstenite = {version = "0.14", features = ["tokio-runtime"]}
log = "*"
tokio = {version = "^1", features = ["sync", "time", "macros"]}
futures = "0.3.5"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2.1.1"
env_logger = "0.7.1"
thiserror = "1.0.20"
hyper = "0.13.7"

[dependencies.serde]
features = ["derive"]
version = "1.0.114"

[dependencies.tungstenite]
default-features = false
version = "0.11.1"
